Update licensing to Apache 2.0, replace CC0 headers, enhance `DemoApplication` for clearer defaults, refactor color handling with `switch`, streamline timer logic, and fix miscellaneous minor bugs